HTML5テンプレート

--- a/HTML5.html
+++ b/HTML5.html
@@ -1,12 +1,14 @@
-<form action="login.php" method="post" id="loginForm">
-    <fieldset>
-	<legend>Login</legend>
-	<div><label for="email">MailAddress</label>
-             <input type="email" name="email" id="email" required></div>
-	<div><label for="password">Password</label>
-	Å@Å@ <input type="password" name="password" id="password" required></div>
-	<div><label for="submit"></label>
-	     <input type="submit" value="Login &rarr;" id="submit"></div>
-     </fieldset>
-</form>
-<script src="js/login.js"></script>
+<!doctype html>
+
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>HTML5 Template</title>
+	<!--[if It IE 9]
+	<script src="http://html5shiv.googleecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+</head>
+<body>
+	<!-- template.html -->
+</body>
+</html>
