名前入力のjavacript,HTML修正

--- a/name.html
+++ b/name.html
@@ -10,7 +10,8 @@
 		<fieldset>
 			<div><label for="firstName">Firstname</label><input type="text" name="firstName" id="firstName" required></div>
 			<div><label for="lastName">Lastname</label><input type="text" name="lastName" id="lastName" required></div>
-			<div><label for="result">Formatname</label><input type="text" name="result" id="result" r></div>
+			<div><label for="result">Formatname</label><input type="text" name="result" id="result"></div>
+			<div><input type="submit" value="sent" id="submit"></div>
 		</fieldset>
 	</form>
 	<script src="js/name.js"></script>
